# paraformer.cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README-zh.md  README.md
backend/ggml/: convert-pt-to-ggml.py  paraformer-asr.h  paraformer.cpp  paraformer.h
backend/ggml/module/: bias_embed.cpp  bias_embed.h  bias_encoder.cpp  bias_encoder.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  frontend.h  ggml-alloc.c  ggml-alloc.h  ggml.c  ggml.h  hparams.cpp  hparams.h  predictor.cpp  predictor.h  utils.h
resource/: SeacoParaformer模型结构.md  paraformer模型结构.md  paraformer特征提取.md
resource/model/: am.mvn
scripts/: check_style_cpplint.sh
src/csrc/: CMakeLists.txt  frontend.cpp  frontend.h  log-mel-filter-bank.h  paraformer-asr.cpp  paraformer-asr.h  paraformer-contextual-offline.cpp  paraformer-contextual-offline.h  paraformer-frontend.cpp  paraformer-frontend.h  paraformer-offline.cpp  paraformer-offline.h  seaco-paraformer-offline.cpp  seaco-paraformer-offline.h
src/csrc/gguf/: CMakeLists.txt  gguf.cpp
src/csrc/module/: bias-encoder.cpp  bias-encoder.h  decoder.h  encoder.h  utils.cpp
src/csrc/test/: CMakeLists.txt  feature-extract-test.cpp  model-forward-test.cpp  model-load-test.cpp  model_load_test.cpp
src/python/: convert-pt-to-ggml.py  convert-pt-to-gguf.py  generate-fbank-filter.py
